fixed white space when in mobile view

--- a/src/scss/components/landing/_landing.scss
+++ b/src/scss/components/landing/_landing.scss
@@ -1,6 +1,6 @@
 .landing {
   &__container {
-    position: absolute;
+    position: relative;
     max-height: 100%;
     max-width: 100%;
     margin: 0;
